[gd_scene load_steps=16 format=3 uid="uid://d0q1kv7u1wqw2"]

[ext_resource type="Script" path="res://ui/hud.gd" id="1_0xvxu"]
[ext_resource type="Texture2D" uid="uid://4jqunvr7ju5r" path="res://ui/settings.png" id="2_ii6sw"]
[ext_resource type="FontFile" uid="uid://dlmf622aj5o6h" path="res://assets/kenvector_future_thin.ttf" id="2_lrrho"]
[ext_resource type="Texture2D" uid="uid://dhocvss2bolgm" path="res://assets/shield_gold.png" id="3_3cyyt"]
[ext_resource type="Texture2D" uid="uid://bh1i8a8ob2tco" path="res://assets/player_small.png" id="3_r8qxr"]
[ext_resource type="Script" path="res://ui/menu_button.gd" id="3_v3mew"]
[ext_resource type="Texture2D" uid="uid://cyrbb5pf6r5yb" path="res://assets/bar_glass_200.png" id="4_3d3tv"]
[ext_resource type="Texture2D" uid="uid://dc2w51ylh7mni" path="res://assets/play_button.png" id="4_7bvg3"]
[ext_resource type="Texture2D" uid="uid://cvv4e7uqwu7ut" path="res://assets/bar_green_200.png" id="5_jsl12"]
[ext_resource type="Texture2D" uid="uid://c4nc3j6s4m3os" path="res://assets/play_button_h.png" id="5_na5a7"]
[ext_resource type="Texture2D" uid="uid://cx0rki5o4ma0g" path="res://assets/health.png" id="6_0klhw"]
[ext_resource type="Texture2D" uid="uid://ct07ntf3bshct" path="res://assets/bar_red_200.png" id="7_u7p2w"]

[sub_resource type="LabelSettings" id="LabelSettings_2thks"]
font = ExtResource("2_lrrho")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_hh2cf"]
font = ExtResource("2_lrrho")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_5u74f"]
font = ExtResource("2_lrrho")
font_size = 64

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_0xvxu")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 112.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MenuButton" type="MenuButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "
"
icon = ExtResource("2_ii6sw")
autowrap_mode = 3
script = ExtResource("3_v3mew")

[node name="ItemList" type="ItemList" parent="MarginContainer/HBoxContainer/MenuButton"]
layout_mode = 0
offset_left = 235.0
offset_top = 87.0
offset_right = 900.0
offset_bottom = 508.0
theme_override_colors/guide_color = Color(0, 0, 0.721569, 1)
theme_override_colors/font_selected_color = Color(0.658824, 0, 0, 0.894118)
theme_override_colors/font_hovered_color = Color(0.705882, 0, 0, 0.654902)
item_count = 3
item_0/text = "SETTINGS"
item_1/text = "CONTROLS"
item_2/text = "EXIT"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MenuButton/ItemList"]
visible = false
layout_mode = 0
offset_left = 11.0
offset_top = 158.0
offset_right = 313.0
offset_bottom = 389.0

[node name="VOLUME" type="Label" parent="MarginContainer/HBoxContainer/MenuButton/ItemList/VBoxContainer"]
layout_mode = 2
text = "VOLUME
"

[node name="HSlider" type="HSlider" parent="MarginContainer/HBoxContainer/MenuButton/ItemList/VBoxContainer"]
layout_mode = 2
min_value = -80.0
max_value = 0.0
tick_count = 6

[node name="FULLSCREEN" type="Label" parent="MarginContainer/HBoxContainer/MenuButton/ItemList/VBoxContainer"]
layout_mode = 2
text = "FULLSCREEN
"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/HBoxContainer/MenuButton/ItemList/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MenuButton/ItemList"]
visible = false
layout_mode = 0
offset_left = 347.0
offset_top = 160.0
offset_right = 649.0
offset_bottom = 391.0

[node name="VSYNC" type="Label" parent="MarginContainer/HBoxContainer/MenuButton/ItemList/VBoxContainer2"]
layout_mode = 2
text = "VSYNC
"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/HBoxContainer/MenuButton/ItemList/VBoxContainer2"]
layout_mode = 2

[node name="RESOLUTION" type="Label" parent="MarginContainer/HBoxContainer/MenuButton/ItemList/VBoxContainer2"]
layout_mode = 2
text = "RESOLUTION
"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/HBoxContainer/MenuButton/ItemList/VBoxContainer2"]
layout_mode = 2
item_count = 1

[node name="ItemList2" type="ItemList" parent="MarginContainer/HBoxContainer/MenuButton"]
layout_mode = 0
offset_left = 236.0
offset_top = 88.0
offset_right = 899.0
offset_bottom = 506.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/MenuButton/ItemList2"]
layout_mode = 0
offset_left = 11.0
offset_top = 110.0
offset_right = 571.0
offset_bottom = 411.0
text = "THRUST - W OR UP ARROW
ROTATE - A/LEFT OR D/RIGHT
BOOST - SHIFT
SHOOT - E
RESTORE LIFE (500 PTS) - ~

PAUSE - P
MENU - ESC"
label_settings = SubResource("LabelSettings_2thks")

[node name="Score" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
label_settings = SubResource("LabelSettings_hh2cf")

[node name="Shield" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_3cyyt")
stretch_mode = 3

[node name="ShieldBar" type="TextureProgressBar" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
texture_over = ExtResource("4_3d3tv")
texture_progress = ExtResource("5_jsl12")

[node name="Health" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_0klhw")
stretch_mode = 3

[node name="HealthBar" type="TextureProgressBar" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
texture_over = ExtResource("4_3d3tv")
texture_progress = ExtResource("7_u7p2w")

[node name="LivesCounter" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="L1" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("3_r8qxr")
stretch_mode = 5

[node name="L2" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("3_r8qxr")
stretch_mode = 5

[node name="L3" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("3_r8qxr")
stretch_mode = 5

[node name="StartButton" type="TextureButton" parent="."]
offset_left = 464.0
offset_top = 411.0
offset_right = 713.0
offset_bottom = 483.0
size_flags_horizontal = 4
texture_normal = ExtResource("4_7bvg3")
texture_hover = ExtResource("5_na5a7")

[node name="Message" type="Label" parent="."]
offset_top = 205.5
offset_right = 1152.0
offset_bottom = 277.5
text = "Space Rocks!
"
label_settings = SubResource("LabelSettings_5u74f")
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="item_selected" from="MarginContainer/HBoxContainer/MenuButton/ItemList" to="MarginContainer/HBoxContainer/MenuButton" method="_on_item_list_item_activated"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/MenuButton/ItemList/VBoxContainer/HSlider" to="MarginContainer/HBoxContainer/MenuButton" method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/MenuButton/ItemList/VBoxContainer/CheckBox" to="MarginContainer/HBoxContainer/MenuButton" method="_on_fullscreen_toggled"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/MenuButton/ItemList/VBoxContainer2/CheckBox" to="MarginContainer/HBoxContainer/MenuButton" method="_on_vsync_toggled"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/MenuButton/ItemList/VBoxContainer2/OptionButton" to="MarginContainer/HBoxContainer/MenuButton" method="_on_res_item_selected"]
[connection signal="empty_clicked" from="MarginContainer/HBoxContainer/MenuButton/ItemList2" to="MarginContainer/HBoxContainer/MenuButton" method="_on_item_list_2_empty_clicked"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
